feat: add last change timestamps to addresStats
